@@ -5293,15 +5293,6 @@ be exposed to the DOM.</span> </p>
   then this output is the filtered rendering of the element. Otherwise, the output of the primitive becomes the input to the next filter primitive using it.
 </p>
 
-<div id="about_interactivity" class="issue">
-    One issue with filter effects is the impact on interactivity. Filters can offset the visual rendering
-    of content and affect the way users interact with content. For example, the <a>'feOffset element'</a>
-    element moves the element's rendering by a given offset, which biases the interaction: the end user
-    may click on an element and actually hit a different one because of the offset. This issue
-    is expected to be more acute with vertex shaders and the working group should consider a general
-    solution to this issue that works for both predefined filter effects and custom ones.
-</div>
-
 <h2 id="FilterCSSImageValue">The filter CSS &lt;image&gt; value</h2>
 
 <p>
