@@ -11717,18 +11717,6 @@ double turbulence(int nColorChannel, double *point, double <a
        the output of the primitive becomes the input to the next filter
        primitive using it.
 
-      <div class=issue id="about_interactivity"> One issue with filter
-       effects is the impact on interactivity. Filters can offset the visual
-       rendering of content and affect the way users interact with content.
-       For example, the <a class=element-name
-       href="#feOffsetElement">‘<code class=property>feOffset</code>’</a>
-       element moves the element's rendering by a given offset, which biases
-       the interaction: the end user may click on an element and actually hit
-       a different one because of the offset. This issue is expected to be
-       more acute with vertex shaders and the working group should consider a
-       general solution to this issue that works for both predefined filter
-       effects and custom ones.</div>
-
       <h2 id=FilterCSSImageValue><span class=secno>33. </span>The filter CSS
        &lt;image&gt; value</h2>
 
