@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 2012-11-08  Dirk Schulze  <dschulze@adobe.com>
+- Remove issue to hit testing. Filters won't effect hit testing, since it could lead to security issues.
+
+2012-11-08  Dirk Schulze  <dschulze@adobe.com>
 - Calrify that filters are applied in the element's local coordinate system.
 
 2012-11-08  Dirk Schulze  <dschulze@adobe.com>
